# project-rust-axum

./: .env  Cargo.toml
migrations/: 20260120071454_create_users_table.sql  20260120072002_create_posts_table.sql  20260120072509_create_tasks_table.sql
src/: error.rs  layers.rs  main.rs
src/layers/: auth.rs  custom.rs
src/models/: auth.rs  task.rs  user.rs
src/routes/: auth.rs  task.rs  user.rs
