[package]
name = "project-x"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
serde = {version = "1.0.228", features = ["derive"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
